--- a/src/desktopFeed.html
+++ b/src/desktopFeed.html
@@ -180,17 +180,17 @@
         <span>.</span>
         <p>8 comments</p>
       </div>
-        <button class="food-btn" id="btn-one" >
+        <button class="food-btn" >
           <span>+</span>
           <span>Save</span>
         </button>
     </div>
   </div>
-  <div class="dsk-modal" id="cls-one">
+  <div class="dsk-modal" >
     <div class="modal-content">
       <div class="modal-title">
         <p class="til title-dark">Save to</p>
-        <span class="title-grey" id="cl-one">X</span>
+        <span class="title-grey dsk-close">X</span>
       </div>
       <p class="modal-item title-light">Western</p>
       <p class="modal-item title-light">Quick Lunch</p>
@@ -228,17 +228,17 @@
         <span>.</span>
         <p>8 comments</p>
       </div>
-        <button class="food-btn" id="btn-two" >
+        <button class="food-btn" >
           <span>+</span>
           <span>Save</span>
         </button>
     </div>
   </div>
-  <div class="dsk-modal" id="cls-two">
+  <div class="dsk-modal" >
     <div class="modal-content">
       <div class="modal-title">
         <p class="til title-dark">Save to</p>
-        <span class="title-grey" id="cl-two">X</span>
+        <span class="title-grey dsk-close">X</span>
       </div>
       <p class="modal-item title-light">Western</p>
       <p class="modal-item title-light">Quick Lunch</p>
@@ -342,17 +342,17 @@
         <span>.</span>
         <p>8 comments</p>
       </div>
-        <button class="food-btn" id="btn-three" >
+        <button class="food-btn" >
           <span>+</span>
           <span>Save</span>
         </button>
     </div>
   </div>
-  <div class="dsk-modal" id="cls-three">
+  <div class="dsk-modal" >
     <div class="modal-content">
       <div class="modal-title">
         <p class="til title-dark">Save to</p>
-        <span class="title-grey" id="cl-three">X</span>
+        <span class="title-grey dsk-close">X</span>
       </div>
       <p class="modal-item title-light">Western</p>
       <p class="modal-item title-light">Quick Lunch</p>
