--- a/src/myProfile.html
+++ b/src/myProfile.html
@@ -169,7 +169,7 @@
                     <p class="head-title title-dark">My Recipes</p>
                     <button class="head-btn text-button">+ Add New</button>
                   </div>
-                  <div class="pl-slice">
+                  <div class="pl-slice d-flex fl-row">
                     <div class="recipes">
   <div class="recipes-img">
     <img src="/images/Recipe Book/photo-1541696432-82c6da8ce7bf.jpeg" alt="reci">
@@ -177,6 +177,7 @@
   <div class="recipes-name">
     <p class="title-dark">Western (8)</p>
   </div>
+  <div class="re-modal"></div>
 </div>
                     <div class="recipes">
   <div class="recipes-img">
@@ -185,6 +186,7 @@
   <div class="recipes-name">
     <p class="title-dark">Italian (2)</p>
   </div>
+  <div class="re-modal"></div>
 </div>
                     <div class="recipes">
   <div class="recipes-img">
@@ -193,6 +195,7 @@
   <div class="recipes-name">
     <p class="title-dark">Desserts (3)</p>
   </div>
+  <div class="re-modal"></div>
 </div>
                     <div class="recipes">
   <div class="recipes-img">
@@ -201,6 +204,7 @@
   <div class="recipes-name">
     <p class="title-dark">Soups (4)</p>
   </div>
+  <div class="re-modal"></div>
 </div>
                     <div class="recipes">
   <div class="recipes-img">
@@ -209,6 +213,7 @@
   <div class="recipes-name">
     <p class="title-dark">Pasta (1)</p>
   </div>
+  <div class="re-modal"></div>
 </div>
                     <div class="recipes">
   <div class="recipes-img">
@@ -217,6 +222,7 @@
   <div class="recipes-name">
     <p class="title-dark">Western (8)</p>
   </div>
+  <div class="re-modal"></div>
 </div>
                   </div>
                 </div>
