slice other profile

--- a/src/otherProfile.html
+++ b/src/otherProfile.html
@@ -107,129 +107,67 @@
       </div>
     </div>
   </div>
-          <!-- <div class="wrap-profile"> -->
-            <div class="b-profile">
-              <div class="pl-left">
-                <div class="b-account">
-  <div class="account-info">
-    <div class="info-avatar">
-      <div class="avatar-photo">
-        <img
-            src="https://images.unsplash.com/profile-1541083044435-f9a443fdfe49?dpr=2&auto=format&fit=crop&w=150&h=150&q=60&crop=faces&bg=fff"
-            alt="avatar">
-      </div> 
+          <div class="pl-ot d-flex flex-row wrap">
+            <div class="ot-left">
+              <div class="wrap d-flex p-2 flex-column box-other">
+  <div class="d-flex flex-row ot-up">
+    <div class="ot-image">
+      <img src="https://media.istockphoto.com/photos/portrait-of-one-gangsta-rapper-outdoors-in-the-city-picture-id1291624386" alt="other profile">
     </div>
-    <div class="info-text">
-      <p class="ac-name title-dark">Nick Evans</p>
-      <p class="ac-skill title-grey">Potato Master</p>
-      <p class="ac-another title-grey"><span>584 followers</span> <span>23k likes</span></p>
-    </div>
-  </div>
-  <div class="account-more">
-    <div class="more-item">
-      <p class="item-number title-dark">20</p>
-      <p class="item-text title-grey">Recipes</p>
-    </div>
-    <div class="more-item">
-      <p class="item-number title-dark">75</p>
-      <p class="item-text title-grey">Saved</p>
-    </div>
-    <div class="more-item">
-      <p class="item-number title-dark">248</p>
-      <p class="item-text title-grey">Following</p>
+    <div class="ot-info d-flex flex-column">
+      <p class="ot-name title-dark">Laquita Elliott</p>
+      <p class="ot-wrk title-grey" style="margin-bottom: 0.3rem;">Food Crafter</p>
+      <p class="title-grey d-flex justify-content-between align-items-center">
+        <span>584 followers</span>
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-dot" viewbox="0 0 20 20">
+          <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
+        </svg>
+        <span>23k likes</span>
+      </p>
     </div>
   </div>
+  <button class="ot-btn text-white">Follow</button>
 </div>
-                <div class="pl-action">
-                  <div class="act-item">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-pencil" viewbox="0 0 16 16">
-                      <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
-                    </svg>
-                    <p class="title-dark">Edit Profile</p>
-                  </div>
-                  <div class="act-item">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-gear" viewbox="0 0 16 16">
-                      <path d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492zM5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0z"/>
-                      <path d="M9.796 1.343c-.527-1.79-3.065-1.79-3.592 0l-.094.319a.873.873 0 0 1-1.255.52l-.292-.16c-1.64-.892-3.433.902-2.54 2.541l.159.292a.873.873 0 0 1-.52 1.255l-.319.094c-1.79.527-1.79 3.065 0 3.592l.319.094a.873.873 0 0 1 .52 1.255l-.16.292c-.892 1.64.901 3.434 2.541 2.54l.292-.159a.873.873 0 0 1 1.255.52l.094.319c.527 1.79 3.065 1.79 3.592 0l.094-.319a.873.873 0 0 1 1.255-.52l.292.16c1.64.893 3.434-.902 2.54-2.541l-.159-.292a.873.873 0 0 1 .52-1.255l.319-.094c1.79-.527 1.79-3.065 0-3.592l-.319-.094a.873.873 0 0 1-.52-1.255l.16-.292c.893-1.64-.902-3.433-2.541-2.54l-.292.159a.873.873 0 0 1-1.255-.52l-.094-.319zm-2.633.283c.246-.835 1.428-.835 1.674 0l.094.319a1.873 1.873 0 0 0 2.693 1.115l.291-.16c.764-.415 1.6.42 1.184 1.185l-.159.292a1.873 1.873 0 0 0 1.116 2.692l.318.094c.835.246.835 1.428 0 1.674l-.319.094a1.873 1.873 0 0 0-1.115 2.693l.16.291c.415.764-.42 1.6-1.185 1.184l-.291-.159a1.873 1.873 0 0 0-2.693 1.116l-.094.318c-.246.835-1.428.835-1.674 0l-.094-.319a1.873 1.873 0 0 0-2.692-1.115l-.292.16c-.764.415-1.6-.42-1.184-1.185l.159-.291A1.873 1.873 0 0 0 1.945 8.93l-.319-.094c-.835-.246-.835-1.428 0-1.674l.319-.094A1.873 1.873 0 0 0 3.06 4.377l-.16-.292c-.415-.764.42-1.6 1.185-1.184l.292.159a1.873 1.873 0 0 0 2.692-1.115l.094-.319z"/>
-                    </svg>
-                    <p class="title-dark">Settings</p>
-                  </div>
-                  <div class="act-item">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-box-arrow-right" viewbox="0 0 16 16">
-                      <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
-                      <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
-                    </svg>
-                    <p class="title-dark">Logout</p>
-                  </div>
+            </div>
+            <div class="ot-right d-flex flex-column">
+              <div class="wrap d-flex flex-column pl-3 pb-3">
+                <div class="ot-title">
+                  <p class="text-dark">Laquita’s Recipes</p>
                 </div>
-              </div>
-              <div class="pl-right">
-                <div class="pl-up">
-                  <div class="pl-head">
-                    <p class="head-title title-dark">My Recipes</p>
-                    <button class="head-btn text-button">+ Add New</button>
-                  </div>
-                  <div class="pl-slice d-flex fl-row">
-                    <div class="recipes">
+                <div class="wrap d-flex flex-row ot-reci">
+                  <div class="recipes">
   <div class="recipes-img">
-    <img src="/images/Recipe Book/recipes-1.jpg" alt="reci">
-  </div>
-  <div class="recipes-name">
-    <p class="title-dark">Western (8)</p>
-  </div>
-  <div class="re-modal"></div>
-</div>
-                    <div class="recipes">
-  <div class="recipes-img">
-    <img src="/images/Recipe Book/recipes-2.jpg" alt="reci">
-  </div>
-  <div class="recipes-name">
-    <p class="title-dark">Italian (2)</p>
-  </div>
-  <div class="re-modal"></div>
-</div>
-                    <div class="recipes">
-  <div class="recipes-img">
-    <img src="/images/Recipe Book/recipes-3.jpg" alt="reci">
-  </div>
-  <div class="recipes-name">
-    <p class="title-dark">Desserts (3)</p>
-  </div>
-  <div class="re-modal"></div>
-</div>
-                    <div class="recipes">
-  <div class="recipes-img">
-    <img src="/images/Recipe Book/recipes-4.jpg" alt="reci">
+    <img src="/images/Recipe Book/recipes-12.jpeg" alt="reci">
   </div>
   <div class="recipes-name">
     <p class="title-dark">Soups (4)</p>
   </div>
   <div class="re-modal"></div>
 </div>
-                    <div class="recipes">
+                  <div class="recipes">
   <div class="recipes-img">
-    <img src="/images/Recipe Book/recipes-5.jpeg" alt="reci">
+    <img src="/images/Recipe Book/recipes-13.jpeg" alt="reci">
   </div>
   <div class="recipes-name">
     <p class="title-dark">Pasta (1)</p>
   </div>
   <div class="re-modal"></div>
 </div>
-                    <div class="recipes">
+                  <div class="recipes">
   <div class="recipes-img">
-    <img src="/images/Recipe Book/recipes-6.jpg" alt="reci">
+    <img src="/images/Recipe Book/recipes-14.jpeg" alt="reci">
   </div>
   <div class="recipes-name">
     <p class="title-dark">Western (8)</p>
   </div>
   <div class="re-modal"></div>
 </div>
-                  </div>
                 </div>
-                <div class="pl-down">
-                  <div class="card-food">
+              </div>
+              <div class="ot-lst-food">
+                <div class="card-food">
   <div class="food-img">
-    <img src="/images/Recipe Book/recipes-7.jpg" alt="food">
+    <img src="/images/Recipe Book/recipes-16.jpeg" alt="food">
   </div>
   <div class="food-details">
     <div class="food-name">
@@ -254,9 +192,9 @@
     </div>
   </div>
 </div>
-                  <div class="card-food">
+                <div class="card-food">
   <div class="food-img">
-    <img src="/images/Recipe Book/recipes-8.jpg" alt="food">
+    <img src="/images/Recipe Book/recipes-17.jpeg" alt="food">
   </div>
   <div class="food-details">
     <div class="food-name">
@@ -281,9 +219,9 @@
     </div>
   </div>
 </div>
-                  <div class="card-food">
+                <div class="card-food">
   <div class="food-img">
-    <img src="/images/Recipe Book/recipes-9.jpg" alt="food">
+    <img src="/images/Recipe Book/recipes-18.jpeg" alt="food">
   </div>
   <div class="food-details">
     <div class="food-name">
@@ -308,9 +246,9 @@
     </div>
   </div>
 </div>
-                  <div class="card-food">
+                <div class="card-food">
   <div class="food-img">
-    <img src="/images/Recipe Book/recipes-10.jpg" alt="food">
+    <img src="/images/Recipe Book/recipes-19.jpeg" alt="food">
   </div>
   <div class="food-details">
     <div class="food-name">
@@ -335,9 +273,9 @@
     </div>
   </div>
 </div>
-                  <div class="card-food">
+                <div class="card-food">
   <div class="food-img">
-    <img src="/images/Recipe Book/recipes-11.jpg" alt="food">
+    <img src="/images/Recipe Book/recipes-20.jpeg" alt="food">
   </div>
   <div class="food-details">
     <div class="food-name">
@@ -362,11 +300,9 @@
     </div>
   </div>
 </div>
-                </div>
               </div>
-
             </div>
-          <!-- </div> -->
+          </div>
         </div>
       </div>
     </main>
@@ -405,3 +341,6 @@
 </body>
 
 </html>
+
+
+
