--- a/src/desktopFeed.html
+++ b/src/desktopFeed.html
@@ -29,6 +29,7 @@
 <link rel="stylesheet" type="text/css" media="screen" href="node_modules/lightgallery/dist/css/lightgallery.min.css" />
 <link rel="stylesheet" type="text/css" media="screen" href="node_modules/mmenu-js/dist/mmenu.css" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
 <!-- endbuild -->
 <!-- build:css(.tmp) styles/style.min.css -->
 <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
@@ -154,7 +155,7 @@
                 <button class="text-button">Create Recipe</button>
               </div>
               <div class="desktop-two-item-main">
-                <div class="b-card" style="background-image:url('/images/Potato Recipes/food one.jpg')">
+                <div class="b-card" style="background-image:url('/images/Potato Recipes/potato-1.jpg')">
   <div class="card-info">
     <div class="card-avatar">
       <div>
@@ -202,7 +203,7 @@
   </div>
 </div>
                 
-                <div class="b-card" style="background-image:url('/images/Potato Recipes/food one.jpg')">
+                <div class="b-card" style="background-image:url('/images/Potato Recipes/potato-2.jpg')">
   <div class="card-info">
     <div class="card-avatar">
       <div>
@@ -316,7 +317,7 @@
                   </div>
                 </div>
                 <hr>
-                <div class="b-card" style="background-image:url('/images/Potato Recipes/food one.jpg')">
+                <div class="b-card" style="background-image:url('/images/Potato Recipes/potato-3.jpg')">
   <div class="card-info">
     <div class="card-avatar">
       <div>
