--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
 <link rel="stylesheet" type="text/css" media="screen" href="node_modules/lightgallery/dist/css/lightgallery.min.css" />
 <link rel="stylesheet" type="text/css" media="screen" href="node_modules/mmenu-js/dist/mmenu.css" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
 <!-- endbuild -->
 <!-- build:css(.tmp) styles/style.min.css -->
 <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
